--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
     "react-tweet": "^3.1.1",
     "sugar-high": "^0.5.3",
     "swr": "^2.2.4",
