--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "npm run setup && next build",
     "build-only": "next build",
     "start": "next start",
@@ -20,23 +20,25 @@
     "@vercel/speed-insights": "^0.0.5",
     "autoprefixer": "^10.4.16",
     "dotenv": "^16.3.1",
-    "eslint-config-next": "^14.0.3",
-    "framer-motion": "^10.16.5",
+    "eslint-config-next": "^14.0.4",
+    "framer-motion": "^10.16.16",
     "geist": "1.1.0",
-    "next": "14.0.4-canary.16",
+    "next": "14.0.5-canary.23",
     "next-auth": "5.0.0-beta.3",
     "next-mdx-remote": "^4.4.1",
-    "postcss": "^8.4.31",
+    "postcss": "^8.4.32",
+    "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
-    "react-tweet": "^3.1.1",
-    "sugar-high": "^0.5.3",
+    "react-tweet": "^3.2.0",
+    "sugar-high": "^0.5.6",
     "swr": "^2.2.4",
-    "tailwindcss": "^3.3.5",
-    "typescript": "5.3.2"
+    "tailwindcss": "^3.4.0",
+    "typescript": "5.3.2",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
-    "eslint": "^8.55.0"
+    "eslint": "^8.56.0"
   }
 }
