--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "eslint-config-next": "^14.0.4",
     "framer-motion": "^10.16.16",
     "geist": "1.1.0",
-    "next": "14.0.5-canary.23",
+    "next": "14.0.4",
     "next-auth": "5.0.0-beta.3",
     "next-mdx-remote": "^4.4.1",
     "postcss": "^8.4.32",
@@ -35,7 +35,7 @@
     "sugar-high": "^0.5.6",
     "swr": "^2.2.4",
     "tailwindcss": "^3.4.0",
-    "typescript": "5.3.2",
+    "typescript": "5.3.3",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
